<resources>
    <string name="app_name">Consultas Medicas</string>
    <string name="register_title">Registro</string>
    <string name="create_consult_title">Crear consulta</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_pass">Confirmar contraseña</string>
    <string name="button_next">Siguiente</string>
    <string name="button_register">Crear cuenta</string>
    <string name="button_log">Iniciar sesion</string>
    <string name="button_cancel">Cancelar</string>
    <string name="error_password">La contraseña debe tener mas de 8 caracteres.</string>
    <string name="error_password2">Las contraseñas deben ser iguales.</string>
    <string name="error_password3">La contraseña o el usuario son incorrectos</string>

    <string name="user_ci">CI</string>
    <string name="user_password">Contraseña</string>
    <string name="user_name">Nombre</string>
    <string name="user_lastname">Apellido</string>
    <string name="user_age">Edad</string>
    <string name="user_genre">Género</string>
    <string name="user_email">Correo electrónico</string>
    <string name="user_weight">Peso</string>
    <string name="user_cellphone">Celular</string>
    <string name="user_height">Altura</string>
    <string name="user_address">Dirección</string>
    <string name="user_city">Ciudad</string>
    <string name="user_birth">Fecha de nacimiento</string>
    <string name="helper_birthdate">aaaa-mm-dd</string>
    <string name="user_nationality">Nacionalidad</string>

    <string name="hint_symptom">Escriba sus síntomas</string>
    <string name="symptom_title">Síntomas</string>


</resources>